added more context

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
           data-testid="opeyemi Obatola"
         />
       </div>
-      <p class="time paragraph">
+      <p class="time">
+        <span class="highlight-text">Current day: </span>
         <span data-testid="currentDayOfTheWeek" id="day-of-the-week"
           >Monday</span
         >
-        <span data-testid="currentUTCTime"><span id="hour">00</span>:<span id="minute">00</span><span id="meridian"> am</span>
+        </p>
+        <p><span class="highlight-text">Current time: </span><span data-testid="currentUTCTime"><span id="hour">00</span>:<span id="minute">00</span><span id="meridian"> am</span>
       </p>
       <p data-testid="myTrack" class="paragraph">
-        <span class="track">Track:</span> Frontend Web Development
+        <span class="highlight-text">Track:</span> Frontend Web Development
       </p>
       <p data-testid="githubURL" class="paragraph">
+        <span class="highlight-text">github url: </span>
         <a
           href="https://github.com/opeyemi-code/HNG-frontend-track-stage-one-task"
           >Click here</a
