--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           >Monday</span
         >
         </p>
-        <p><span class="highlight-text">Current time: </span><span data-testid="currentUTCTime"><span id="hour">00</span>:<span id="minute">00</span><span id="meridian"> am</span>
+        <p><span class="highlight-text">Current time: </span><span data-testid="currentUTCTime"><span id="hour">00</span>:<span id="minute">00</span>:<span id="seconds"> 00</span><span id="meridian"> am</span>
       </p>
       <p data-testid="myTrack" class="paragraph">
         <span class="highlight-text">Track:</span> Frontend Web Development
       </p>
       <p data-testid="githubURL" class="paragraph">
-        <span class="highlight-text">github url: </span>
+        <span class="highlight-text">Github url: </span>
         <a
           href="https://github.com/opeyemi-code/HNG-frontend-track-stage-one-task"
           >Click here</a
