--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           >Monday</span
         >
         </p>
-        <p><span class="highlight-text">Current time: </span><span data-testid="currentUTCTime"><span id="hour">00</span>:<span id="minute">00</span>:<span id="seconds"> 00</span><span id="meridian"> am</span>
+        <p><span class="highlight-text">Current time: </span><span data-testid="currentUTCTime"><span id="time">00:00:00</span><span id="meridian"> am</span>
       </p>
       <p data-testid="myTrack" class="paragraph">
         <span class="highlight-text">Track:</span> Frontend Web Development
