--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <div class="container">
-      <h1 data-testid="Opeyemi Obatola">Opeyemi Obatola</h1>
+      <h1 data-testid="slackUserName">Opeyemi Obatola</h1>
       <div class="img-container">
         <img
           src="img.jpg"
-          alt="opeyemi obatola"
+          alt="slackDisplayImage"
           data-testid="opeyemi Obatola"
         />
       </div>
-      <p class="time">
+      <p data-testid="currentDayOfTheWeek">
         <span class="highlight-text">Current day: </span>
-        <span data-testid="currentDayOfTheWeek" id="day-of-the-week"
+        <span id="day-of-the-week"
           >Monday</span
         >
         </p>
